--- a/html_menu_1/index.html
+++ b/html_menu_1/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Find easily a doctor and book online an appointment">
-	<meta name="author" content="Ansonika">
-	<title>FINDOCTOR - Find easily a doctor and book online an appointment</title>
+	<meta name="description" content="Encuentra facilmente un doctor y agenda tu cita ahora!">
+	<meta name="author" content="David, Jhossias, Galo">
+	<title>PSYCHOBOOKING - Encuentra facilmente un doctor y agenda tu cita ahora!</title>
 
 	<!-- Favicons-->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -46,7 +46,7 @@
 			<div class="row">
 				<div class="col-lg-3 col-6">
 					<div id="logo_home">
-						<h1><a href="index.html" title="Findoctor">Findoctor</a></h1>
+						<h1><a href="index.html" title="PSYCHOBOOKING">PSYCHOBOOKING</a></h1>
 					</div>
 				</div>
 				<nav class="col-lg-9 col-6">
@@ -60,13 +60,7 @@
 							<li class="submenu">
 								<a href="#0" class="show-submenu">Home<i class="icon-down-open-mini"></i></a>
 								<ul>
-									<li><a href="index.html">Home Default</a></li>
-									<li><a href="index-2.html">Home Version 2</a></li>
-									<li><a href="index-3.html">Home Version 3</a></li>
-									<li><a href="index-4.html">Home Version 4</a></li>
-									<li><a href="index-7.html">Home with Map</a></li>
-                                    <li><a href="index-6.html">Revolution Slider</a></li>
-									<li><a href="index-5.html">With Cookie Bar (EU law)</a></li>
+									<li><a href="index.html">Principal</a></li>
 								</ul>
 							</li>
 							<li class="submenu">
@@ -87,16 +81,16 @@
 											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
                                         </ul>
 									</li>
-									<li><a href="submit-review.html">Submit Review</a></li>
+									<li><a href="submit-review.html">Déjanos un comentario</a></li>
 									<li><a href="blog-1.html">Blog</a></li>
 									<li><a href="badges.html">Badges</a></li>
-									<li><a href="login.html">Login</a></li>
-									<li><a href="login-2.html">Login 2</a></li>
-									<li><a href="register-doctor.html">Register Doctor</a></li>
-									<li><a href="register-doctor-working.html">Working doctor register</a></li>
-									<li><a href="register.html">Register</a></li>
-									<li><a href="about.html">About Us</a></li>
-									<li><a href="contacts.html">Contacts</a></li>
+									<li><a href="login.html">Inicio de sesión</a></li>
+									<li><a href="login-2.html">Inicio de sesión 2</a></li>
+									<li><a href="register-doctor.html">Register Psicólogo</a></li>
+									<li><a href="register-doctor-working.html">Registro de psicólogo</a></li>
+									<li><a href="register.html">Registrar</a></li>
+									<li><a href="about.html">Sobre nosotros</a></li>
+									<li><a href="contacts.html">Contactos</a></li>
 								</ul>
 							</li>
 							<li class="submenu">
@@ -119,7 +113,6 @@
 									<li><a href="404.html">404 page</a></li>
 								</ul>
 							</li>
-							<li><a href="#0">Buy this template</a></li>
 						</ul>
 					</div>
 					<!-- /main-menu -->
@@ -133,7 +126,7 @@
 	<main>
 		<div class="hero_home version_1">
 			<div class="content">
-				<h3>Find a Doctor!</h3>
+				<h3>Encuenctra un psicólogo!</h3>
 				<p>
 					Ridiculus sociosqu cursus neque cursus curae ante scelerisque vehicula.
 				</p>
@@ -146,15 +139,15 @@
 						<ul>
 							<li>
 								<input type="radio" id="all" name="radio_search" value="all" checked>
-								<label for="all">All</label>
+								<label for="all">Todos</label>
 							</li>
 							<li>
 								<input type="radio" id="doctor" name="radio_search" value="doctor">
-								<label for="doctor">Doctor</label>
+								<label for="doctor">Psicólogo</label>
 							</li>
 							<li>
 								<input type="radio" id="clinic" name="radio_search" value="clinic">
-								<label for="clinic">Clinic</label>
+								<label for="clinic">Consultorio</label>
 							</li>
 						</ul>
 					</div>
@@ -165,33 +158,33 @@
 
 		<div class="container margin_120_95">
 			<div class="main_title">
-				<h2>Discover the <strong>online</strong> appointment!</h2>
+				<h2>Descubre el <strong>agendamiento</strong> online!</h2>
 				<p>Usu habeo equidem sanctus no. Suas summo id sed, erat erant oporteat cu pri. In eum omnes molestie. Sed ad debet scaevola, ne mel.</p>
 			</div>
 			<div class="row add_bottom_30">
 				<div class="col-lg-4">
 					<div class="box_feat" id="icon_1">
 						<span></span>
-						<h3>Find a Doctor</h3>
+						<h3>Encuentra un psicólogo</h3>
 						<p>Usu habeo equidem sanctus no. Suas summo id sed, erat erant oporteat cu pri. In eum omnes molestie.</p>
 					</div>
 				</div>
 				<div class="col-lg-4">
 					<div class="box_feat" id="icon_2">
 						<span></span>
-						<h3>View profile</h3>
+						<h3>Ver perfil</h3>
 						<p>Usu habeo equidem sanctus no. Suas summo id sed, erat erant oporteat cu pri. In eum omnes molestie.</p>
 					</div>
 				</div>
 				<div class="col-lg-4">
 					<div class="box_feat" id="icon_3">
-						<h3>Book a visit</h3>
+						<h3>Agenda una</h3>
 						<p>Usu habeo equidem sanctus no. Suas summo id sed, erat erant oporteat cu pri. In eum omnes molestie.</p>
 					</div>
 				</div>
 			</div>
 			<!-- /row -->
-			<p class="text-center"><a href="list.html" class="btn_1 medium">Find Doctor</a></p>
+			<p class="text-center"><a href="list.html" class="btn_1 medium">Find Psicólogo</a></p>
 
 		</div>
 		<!-- /container -->
@@ -283,7 +276,7 @@
 							<h3>Search by type</h3>
 						</div>
 						<ul>
-							<li><a href="#0"><strong>23</strong>Allergist</a></li>
+							<li><a href="#0"><strong>23</strong>Todosergist</a></li>
 							<li><a href="#0"><strong>23</strong>Cardiologist</a></li>
 							<li><a href="#0"><strong>23</strong>Chiropractor</a></li>
 							<li><a href="#0"><strong>23</strong>Dentist</a></li>
@@ -309,7 +302,7 @@
 					</div>
 					<div class="col-md-6">
 						<small>Application</small>
-						<h3>Download <strong>Findoctor App</strong> Now!</h3>
+						<h3>Download <strong>PSYCHOBOOKING App</strong> Now!</h3>
 						<p class="lead">Tota omittantur necessitatibus mei ei. Quo paulo perfecto eu, errem percipit ponderum no eos. Has eu mazim sensibus. Ad nonumes dissentiunt qui, ei menandri electram eos. Nam iisque consequuntur cu.</p>
 						<div class="app_buttons wow" data-wow-offset="100">
 							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 43.1 85.9" style="enable-background:new 0 0 43.1 85.9;" xml:space="preserve">
@@ -335,7 +328,7 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-12">
 					<p>
-						<a href="index.html" title="Findoctor">
+						<a href="index.html" title="PSYCHOBOOKING">
 							<img src="img/logo.png" data-retina="true" alt="" width="163" height="36" class="img-fluid">
 						</a>
 					</p>
@@ -353,10 +346,10 @@
 				<div class="col-lg-3 col-md-4">
 					<h5>Useful links</h5>
 					<ul class="links">
-						<li><a href="#0">Doctors</a></li>
-						<li><a href="#0">Clinics</a></li>
+						<li><a href="#0">Psicólogos</a></li>
+						<li><a href="#0">Consultorios</a></li>
 						<li><a href="#0">Specialization</a></li>
-						<li><a href="#0">Join as a Doctor</a></li>
+						<li><a href="#0">Join as a Psicólogo</a></li>
 						<li><a href="#0">Download App</a></li>
 					</ul>
 				</div>
@@ -364,7 +357,7 @@
 					<h5>Contact with Us</h5>
 					<ul class="contacts">
 						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
-						<li><a href="mailto:info@findoctor.com"><i class="icon_mail_alt"></i> help@findoctor.com</a></li>
+						<li><a href="mailto:info@PSYCHOBOOKING.com"><i class="icon_mail_alt"></i> help@PSYCHOBOOKING.com</a></li>
 					</ul>
 					<div class="follow_us">
 						<h5>Follow us</h5>
@@ -387,7 +380,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2017 Findoctor</div>
+					<div id="copy">© 2017 PSYCHOBOOKING</div>
 				</div>
 			</div>
 		</div>
