--- a/html_menu_1/index.html
+++ b/html_menu_1/index.html
@@ -53,66 +53,17 @@
 					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menu mobile</span></a>
 					<ul id="top_access">
 						<li><a href="login.html"><i class="pe-7s-user"></i></a></li>
-						<li><a href="register-doctor.html"><i class="pe-7s-add-user"></i></a></li>
+						<li><a href="register.html"><i class="pe-7s-add-user"></i></a></li>
 					</ul>
 					<div class="main-menu">
 						<ul>
-							<li class="submenu">
-								<a href="#0" class="show-submenu">Home<i class="icon-down-open-mini"></i></a>
-								<ul>
-									<li><a href="index.html">Principal</a></li>
-								</ul>
-							</li>
-							<li class="submenu">
-								<a href="#0" class="show-submenu">Pages<i class="icon-down-open-mini"></i></a>
-								<ul>
-									<li class="third-level"><a href="#0">List pages</a>
-										<ul>
-                                            <li><a href="list.html">List page</a></li>
-											<li><a href="grid-list.html">List grid page</a></li>
-											<li><a href="list-map.html">List map page</a></li>
-                                        </ul>
-									</li>
-									<li class="third-level"><a href="#0">Detail pages</a>
-										<ul>
-                                            <li><a href="detail-page-2.html">Detail page 1</a></li>
-                                            <li><a href="detail-page-2.html">Detail page 2</a></li>
-                                    		<li><a href="detail-page-3.html">Detail page 3</a></li>
-											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
-                                        </ul>
-									</li>
-									<li><a href="submit-review.html">Déjanos un comentario</a></li>
-									<li><a href="blog-1.html">Blog</a></li>
-									<li><a href="badges.html">Badges</a></li>
-									<li><a href="login.html">Inicio de sesión</a></li>
-									<li><a href="login-2.html">Inicio de sesión 2</a></li>
-									<li><a href="register-doctor.html">Registrar Psicólogo</a></li>
-									<li><a href="register-doctor-working.html">Registro de psicólogo</a></li>
-									<li><a href="register.html">Registrar</a></li>
-									<li><a href="about.html">Sobre nosotros</a></li>
-									<li><a href="contacts.html">Contactos</a></li>
-								</ul>
-							</li>
-							<li class="submenu">
-								<a href="#0" class="show-submenu">Extra Elements<i class="icon-down-open-mini"></i></a>
-								<ul>
-                                    <li><a href="booking-page.html">Booking page</a></li>
-                                    <li><a href="confirm.html">Confirm page</a></li>
-                                	<li><a href="faq.html">Faq page</a></li>
-                                    <li><a href="coming_soon/index.html">Coming soon</a></li>
-									<li class="third-level"><a href="#0">Pricing tables</a>
-										<ul>
-											<li><a href="pricing-tables-3.html">Pricing tables 1</a></li>
-                                    		<li><a href="pricing-tables.html">Pricing tables 2</a></li>
-                                    		<li><a href="pricing-tables-2.html">Pricing tables 3</a></li>
-										</ul>
-									</li>
-									<li><a href="icon-pack-1.html">Icon pack 1</a></li>
-									<li><a href="icon-pack-2.html">Icon pack 2</a></li>
-									<li><a href="icon-pack-3.html">Icon pack 3</a></li>
-									<li><a href="404.html">404 page</a></li>
-								</ul>
-							</li>
+							<li><a href="index.html">Principal</a></li>
+							<li><a href="blog-1.html">Noticias</a></li>
+							<li><a href="register-doctor.html">Registrar Psicólogo</a></li>
+							<li><a href="about.html">Sobre nosotros</a></li>
+							<li><a href="contacts.html">Contactenos</a></li>
+							<li><a href="faq.html">Faq page</a></li>
+							
 						</ul>
 					</div>
 					<!-- /main-menu -->
@@ -131,26 +82,7 @@
 					Ridiculus sociosqu cursus neque cursus curae ante scelerisque vehicula.
 				</p>
 				<form method="GET" action="list.html">
-					<div id="custom-search-input">
-						<div class="input-group">
-							<input type="text" class=" search-query" placeholder="Ej. Nombre, Especialización ....">
-							<input type="submit" class="btn_search" value="Buscar">
-						</div>
-						<ul>
-							<li>
-								<input type="radio" id="all" name="radio_search" value="all" checked>
-								<label for="all">Todos</label>
-							</li>
-							<li>
-								<input type="radio" id="doctor" name="radio_search" value="doctor">
-								<label for="doctor">Psicólogo</label>
-							</li>
-							<li>
-								<input type="radio" id="clinic" name="radio_search" value="clinic">
-								<label for="clinic">Consultorio</label>
-							</li>
-						</ul>
-					</div>
+					<p class="text-center"><a href="list.html" class="btn_1 medium">Buscar Psicólogo</a></p>
 				</form>
 			</div>
 		</div>
@@ -184,7 +116,7 @@
 				</div>
 			</div>
 			<!-- /row -->
-			<p class="text-center"><a href="list.html" class="btn_1 medium">Find Psicólogo</a></p>
+			<p class="text-center"><a href="list.html" class="btn_1 medium">Buscar Psicólogo</a></p>
 
 		</div>
 		<!-- /container -->
@@ -243,55 +175,7 @@
 		</div>
 		<!-- /white_bg -->
 
-		<div class="container margin_120_95">
-			<div class="main_title">
-				<h2>Encuentra un psicólogo y agenda una visita por ubicación</h2>
-				<p>Nec graeci sadipscing disputationi ne, mea ea nonumes percipitur. Nonumy ponderum oporteat cu mel, pro movet cetero at.</p>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-xl-4 col-lg-5 col-md-6">
-					<div class="list_home">
-						<div class="list_title">
-							<i class="icon_pin_alt"></i>
-							<h3>Buscar por ciudad o sector</h3>
-						</div>
-						<ul>
-							<li><a href="#0"><strong>23</strong>Albany</a></li>
-							<li><a href="#0"><strong>23</strong>Albuquerque</a></li>
-							<li><a href="#0"><strong>23</strong>Atlanta</a></li>
-							<li><a href="#0"><strong>23</strong>Baltimore</a></li>
-							<li><a href="#0"><strong>23</strong>Baton Rouge</a></li>
-							<li><a href="#0"><strong>23</strong>Birmingham</a></li>
-							<li><a href="#0"><strong>23</strong>Boston</a></li>
-							<li><a href="#0"><strong>23</strong>Buffalo</a></li>
-							<li><a href="#0"><strong>23</strong>Charleston</a></li>
-							<li><a href="#0">More...</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-xl-4 col-lg-5 col-md-6">
-					<div class="list_home">
-						<div class="list_title">
-							<i class="icon_archive_alt"></i>
-							<h3>Buscar por tipo</h3>
-						</div>
-						<ul>
-							<li><a href="#0"><strong>23</strong>Todosergist</a></li>
-							<li><a href="#0"><strong>23</strong>Cardiologist</a></li>
-							<li><a href="#0"><strong>23</strong>Chiropractor</a></li>
-							<li><a href="#0"><strong>23</strong>Dentist</a></li>
-							<li><a href="#0"><strong>23</strong>Dermatologist</a></li>
-							<li><a href="#0"><strong>23</strong>Gastroenterologist</a></li>
-							<li><a href="#0"><strong>23</strong>Ophthalmologist</a></li>
-							<li><a href="#0"><strong>23</strong>Optometrist</a></li>
-							<li><a href="#0"><strong>23</strong>Pediatrician</a></li>
-							<li><a href="#0">More....</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<!-- /row -->
-		</div>
+		
 		<!-- /container -->
 
 		<div id="app_section">
@@ -326,34 +210,24 @@
 	<footer>
 		<div class="container margin_60_35">
 			<div class="row">
-				<div class="col-lg-3 col-md-12">
+				<div class="col-lg-4 col-md-12">
 					<p>
 						<a href="index.html" title="PSYCHOBOOKING">
 							<img src="img/logo.png" data-retina="true" alt="" width="163" height="36" class="img-fluid">
 						</a>
 					</p>
 				</div>
-				<div class="col-lg-3 col-md-4">
+				<div class="col-lg-4 col-md-4">
 					<h5>Acerca de</h5>
 					<ul class="links">
-						<li><a href="#0">Sobre nosotros</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="#0">FAQ</a></li>
-						<li><a href="login.html">Login</a></li>
-						<li><a href="register.html">Registrar</a></li>
+						<li><a href="blog-1.html">Noticias</a></li>
+						<li><a href="register-doctor.html">Registrar Psicólogo</a></li>
+						<li><a href="about.html">Sobre nosotros</a></li>
+						<li><a href="contacts.html">Contactenos</a></li>
 					</ul>
 				</div>
-				<div class="col-lg-3 col-md-4">
-					<h5>Links útiles</h5>
-					<ul class="links">
-						<li><a href="#0">Psicólogos</a></li>
-						<li><a href="#0">Consultorios</a></li>
-						<li><a href="#0">Specialization</a></li>
-						<li><a href="#0">Unete como Psicólogo</a></li>
-						<li><a href="#0">Descargar App</a></li>
-					</ul>
-				</div>
-				<div class="col-lg-3 col-md-4">
+				
+				<div class="col-lg-4 col-md-4">
 					<h5>Contact with Us</h5>
 					<ul class="contacts">
 						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
